# ai-agents

./: .gitignore  dev-requirements.txt  setup.cfg  setup.py
aicraft/agents/: __init__.py  abstract.py
aicraft/agents/actioners/: wrapper.py
aicraft/agents/analysers/: wrapper.py
aicraft/agents/chat/: wrapper.py
aicraft/agents/coders/: wrapper.py
aicraft/models/: __init__.py  abstract.py
aicraft/models/deepseek/: wrapper.py
aicraft/models/functionary/: wrapper.py
aicraft/models/gemma/: wrapper.py
aicraft/models/llama/: wrapper.py
aicraft/models/openai/: wrapper.py
aicraft/models/phi/: wrapper.py
aicraft/models/qwen/: wrapper.py
aicraft/tools/: executor.py  prompts.py  storage.py  tools.py
aicraft/types/: __init__.py  analysers.py  chat.py  data_analyst.py  inference.py  prompt.py  scrapers.py  tools.py
aicraft_agents/models/: __init__.py  abstract_wrapper.py
aicraft_agents/models/codellama/: wrapper.py
aicraft_agents/models/llama/: wrapper.py
aicraft_agents/models/openai/: wrapper.py
apps/hobu_copilot/: agents.py  constants.py  copilot.py  executor.py  render.py  run.py  tools.py
notebooks/: Speech.ipynb  agent-scratch-book.ipynb  data-analysis.ipynb
notebooks/llm-inference-optim/: Batching.ipynb  LoRA.ipynb  kv-Caching.ipynb  quantisation.ipynb
resources/: docker-compose.yaml  interest.csv
resources/prompt-templates/hobu-copilot/: action-caller.tmpl  data-analyst.tmpl  estate-agent-service-desk.tmpl  preference-analysis.tmpl  web-scraper.tmpl
