[metadata]
name = aicraft_agents
;version = 0.0.0
author = Sangram Reddy
author_email = reddy.horcrux@gmail.com
description = A package that allows to speed up AI research
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/reddy-s/ai-agents
project_urls =
    Bug Tracker = https://github.com/reddy-s/ai-agents/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.11
install_requires =
    pandas==2.2.2
    transformers==4.43.3
    torch==2.4.0
    matplotlib==3.9.1
    tiktoken==0.7.0
    pyautogen==0.2.33
    accelerate==0.33.0
    openai==1.38.0

[options.packages.find]
where = .
