[metadata]
name = aicraft
;version = 0.0.0
author = Sangram Reddy
author_email = reddy.horcrux@gmail.com
description = A package that allows to speed up AI research
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/reddy-s/ai-agents
project_urls =
    Bug Tracker = https://github.com/reddy-s/ai-agents/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.11
install_requires =
    pandas==2.2.2
    transformers==4.43.3
    torch==2.4.0
    torchvision==0.19.0
    matplotlib==3.9.1
    tiktoken==0.7.0
    accelerate==0.33.0
    openai==1.40.0
    llama-cpp-python==0.2.87
    pydantic
    python-dotenv==1.0.1
    streamlit==1.37.1
    pdfplumber==0.11.3

[options.extras_require]
dev =
    jupyter==1.0.0
    setuptools==72.1.0
    wheel==0.44.0
    build==1.2.1
    virtualenv==20.26.3
    twine==5.1.1
    matplotlib==3.9.1

[options.packages.find]
where = .
